--- a/CurrencyExchange/GUI/index.html
+++ b/CurrencyExchange/GUI/index.html
@@ -166,7 +166,7 @@ body{
       <div id="settings_menu" class="settingMenu">
         <select id="stats">
           <option value="1" onclick="SetAnalysis(1)">Moving Average Crossover</option>
-          <option value="2" onclick="SetAnalysis(2)">Relative Strength Index</option>
+          <option value="2" onclick="SetAnalysis(2)">MAC-D</option>
           <option value="3" onclick="SetAnalysis(3)">More To Come...</option>
         </select>
       </div>
